<resources>
    <string name="app_name">Recibo</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="save_details">Save Details</string>
    <string name="user_first_name">User First Name</string>
    <string name="user_last_name">User Last Name</string>
    <string name="user_mobile_number">User Mobile Number</string>
</resources>